--- a/pages/caracteristicas.html
+++ b/pages/caracteristicas.html
@@ -15,20 +15,26 @@
         <div id="container">
             <div id="inicio">
                 <span id="caracMsg" class="mainMsg">Selecione as características do produto:</span><br>
-    
+					
+					<a href="mapConfirmarPed1.html">
                 <div id="caracteristicas">
                     <div id="dvFragil">
-                        <img src="../assets/icnFragil.png" name="fragil" class="icn" alt="">
+                        <img src="../assets/icnFragil.png" name="fragil" class="icn" alt="" onclick="">
                         <label for="fragil">Frágil</label>
                     </div>
+					</a>
+					<a href="mapConfirmarPed2.html">
                     <div id="dvInfla">
-                        <img src="../assets/icnInflamavel.png" name="inflamavel" class="icn" alt="">
+                        <img src="../assets/icnInflamavel.png" name="inflamavel" class="icn" alt="" onclick="">
                         <label for="inflamavel">Inflamável</label>
                     </div>
+					</a>
+					<a href="mapConfirmarPed3.html">
                     <div id="dvToxico">
-                        <img src="../assets/icnToxico.png" name="toxico" class="icn" alt="">
+                        <img src="../assets/icnToxico.png" name="toxico" class="icn" alt="" onclick="">
                         <label for="toxico">Tóxico</label>    
                     </div>
+					</a>
                 </div>
 
                 <a href="mapConfirmarPed.html" role="button">
