Alteração na parte confirmação delivery

--- a/pages/mapConfirmadoPed.html
+++ b/pages/mapConfirmadoPed.html
@@ -65,6 +65,8 @@
             </div>            
         </div>
         <a href="#" id="btnConfirmar">CANCELAR COLETA</a>
+		
+		<a href="pedidoEntregue.html" id="btnConfirmar">FINALIZAR PEDIDO</a>
     </div>
 
     <div id="map" class="mapPedConfirmado">
