Correção do estilo das letras da pagina caracteristicas

--- a/pages/caracteristicas.html
+++ b/pages/caracteristicas.html
@@ -15,25 +15,25 @@
         <div id="container">
             <div id="inicio">
                 <span id="caracMsg" class="mainMsg">Selecione as características do produto:</span><br>
-					
-					<a href="mapConfirmarPed1.html">
+                    
                 <div id="caracteristicas">
-                    <div id="dvFragil">
-                        <img src="../assets/icnFragil.png" name="fragil" class="icn" alt="" onclick="">
-                        <label for="fragil">Frágil</label>
-                    </div>
+				    <a href="mapConfirmarPed1.html" class="spanText">
+                        <div id="dvFragil">
+                            <img src="../assets/icnFragil.png" name="fragil" class="icn" alt="">
+                            <label for="fragil">Frágil</label>
+                        </div>
 					</a>
-					<a href="mapConfirmarPed2.html">
-                    <div id="dvInfla">
-                        <img src="../assets/icnInflamavel.png" name="inflamavel" class="icn" alt="" onclick="">
-                        <label for="inflamavel">Inflamável</label>
-                    </div>
+					<a href="mapConfirmarPed2.html" class="spanText">
+                        <div id="dvInfla">
+                            <img src="../assets/icnInflamavel.png" name="inflamavel" class="icn" alt="">
+                            <label for="inflamavel">Inflamável</label>
+                        </div>
 					</a>
-					<a href="mapConfirmarPed3.html">
-                    <div id="dvToxico">
-                        <img src="../assets/icnToxico.png" name="toxico" class="icn" alt="" onclick="">
-                        <label for="toxico">Tóxico</label>    
-                    </div>
+					<a href="mapConfirmarPed3.html" class="spanText">
+                        <div id="dvToxico">
+                            <img src="../assets/icnToxico.png" name="toxico" class="icn" alt="">
+                            <label for="toxico" >Tóxico</label>    
+                        </div>
 					</a>
                 </div>
 
