Alteração do redirecionamento em algumas telas

--- a/pages/classificarDeliv.html
+++ b/pages/classificarDeliv.html
@@ -32,7 +32,7 @@
         <span id="outroValor">Outro valor</span>
     </div>
     <div id="divBtnGorgeta">
-        <a href="#" id="btnConfirmar">PRONTO</a>
+        <a href="../index.html" id="btnConfirmar">PRONTO</a>
     </div>
     
 </body>
