--- a/pages/mapConfirmadoPed.html
+++ b/pages/mapConfirmadoPed.html
@@ -64,7 +64,7 @@
                 </div>
             </div>            
         </div>
-        <a href="#" id="btnConfirmar">CANCELAR COLETA</a>
+        <a href="mapConfirmarPed.html" id="btnConfirmar">CANCELAR COLETA</a>
 		
 		<a href="pedidoEntregue.html" id="btnConfirmar">FINALIZAR PEDIDO</a>
     </div>
