Alterado que alguns valores não sejam mais fixos

--- a/pages/caracteristicas.html
+++ b/pages/caracteristicas.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img src="../assets/btnList.PNG" class="btnList" alt="">
+    <img src="../assets/btnList.png" class="btnList" alt="">
     <div id="menu">
         <div id="container">
             <div id="inicio">
