--- a/pages/mapConfirmadoPed.html
+++ b/pages/mapConfirmadoPed.html
@@ -44,7 +44,7 @@
            <span id="LocTit">Localizacao</span>
            <div id="enderecoDeliv">
                <img src="../assets/icnLoc.png" alt="">
-                <span>Avenida Vilarinho, 1015, Venda Nova - BH </span>
+                <span id="enderecoEntrega"></span>
            </div>   
         </div>
 
@@ -72,5 +72,6 @@
     <div id="map" class="mapPedConfirmado">
     </div>
     <script src="../js/map.js"></script>
+    <script src="../js/loadData.js"></script>
 </body>
 </html>
