--- a/pages/mapConfirmarPed1.html
+++ b/pages/mapConfirmarPed1.html
@@ -22,7 +22,7 @@
             </div>
             <span id="preco">R$10,30</span>
         </div>
-        <span id="produtoDimensoes">Produto de 15cm x 15cm x 15cm</span>
+        <span id="produtoDimensoes"></span>
         <div id="produtoCaracteristica">
             <div id="prodFragil">
                 <img src="../assets/icnFragil.png" name="fragil" class="icnSlt" alt="">
@@ -39,5 +39,6 @@
     <div id="map" class="mapPedConfirmar">
     </div>
     <script src="../js/map.js"></script>
+    <script src="../js/loadData.js"></script>
 </body>
 </html>
