--- a/pages/medidas.html
+++ b/pages/medidas.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <img src="../assets/btnList.PNG" class="btnList" alt="">
+    <img src="../assets/btnList.png" class="btnList" alt="">
     <div id="menu">
         <div id="container">
             <div id="inicio">
@@ -35,12 +35,13 @@
                     <input type="text" name="valor" id="valorTxt" placeholder="R$">
                 </div>
 
-                <a href="caracteristicas.html" role="button">
+                <a href="caracteristicas.html" role="button" id="btnNextAnchor">
                     <img src="../assets/btnNext.png" id="btnNextMedida" alt="">
                 </a>
 
             </div>
         </div>
     </div>
+    <script src="../js/saveData.js"></script>
 </body>
 </html>
