--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -12,35 +12,29 @@
 
 <body>
 
-    <img src="assets/btnList.PNG" class="btnList" alt="">
+    <img src="assets/btnList.png" class="btnList" alt="">
+    <div id="menu">
+        <div id="container">
+            <div id="inicio">
+                <span id="introMsg" class="mainMsg">Bom dia, Júlia</span><br>
 
-    <div id="map">
-
-        <div id="menu">
-            <div id="container">
-                <div id="inicio">
-                    <span id="introMsg" class="mainMsg">Bom dia, Júlia</span><br>
-
-                    <div id="what">
-                        <label for="whatDlv">O que entregar?</label>
-                        <input type="text" name="whatDlv" id="whatDlv">
-                    </div>
-
-                    <div id="where">
-                        <label for="whereDlv">Onde quer entregar?</label>
-                        <input type="text" name="whereDlv" id="whereDlv" autocomplete="address-line1">
-                    </div>
-
-                    <a href="pages/medidas.html" role="button">
-                        <img src="assets/btnNext.png" class="btnNext" alt="">
-                    </a>
-
+                <div id="what">
+                    <label for="whatDlv">O que entregar?</label>
+                    <input type="text" name="whatDlv" id="whatDlv">
                 </div>
+
+                <div id="where">
+                    <label for="whereDlv">Onde quer entregar?</label>
+                    <input type="text" name="whereDlv" id="whereDlv" autocomplete="address-line1">
+                </div>
+
+                <a href="pages/medidas.html" role="button" id="btnNextAnchor">
+                    <img src="assets/btnNext.png" class="btnNext" alt="">
+                </a>
+
             </div>
         </div>
-
     </div>
-    <script src="map.js"></script>
+    <script src="js/saveData.js"></script>
 </body>
-
 </html>
