Correção do nome da extensão do botão btnNext

--- a/pages/caracteristicas.html
+++ b/pages/caracteristicas.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img src="../assets/btnList.png" class="btnList" alt="">
+    <img src="../assets/btnList.PNG" class="btnList" alt="">
     <div id="menu">
         <div id="container">
             <div id="inicio">
@@ -38,7 +38,7 @@
                 </div>
 
                 <a href="mapConfirmarPed.html" role="button">
-                    <img src="../assets/btnNext.png" id="btnNextCaracteristica" alt="">
+                    <img src="../assets/btnNext.PNG" id="btnNextCaracteristica" alt="">
                 </a>
 
             </div>
