--- a/pages/medidas.html
+++ b/pages/medidas.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <img src="../assets/btnList.png" class="btnList" alt="">
+    <img src="../assets/btnList.PNG" class="btnList" alt="">
     <div id="menu">
         <div id="container">
             <div id="inicio">
@@ -36,7 +36,7 @@
                 </div>
 
                 <a href="caracteristicas.html" role="button" id="btnNextAnchor">
-                    <img src="../assets/btnNext.png" id="btnNextMedida" alt="">
+                    <img src="../assets/btnNext.PNG" id="btnNextMedida" alt="">
                 </a>
 
             </div>
