--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <img src="assets/btnList.png" class="btnList" alt="">
+    <img src="assets/btnList.PNG" class="btnList" alt="">
     <div id="menu">
         <div id="container">
             <div id="inicio">
@@ -29,7 +29,7 @@
                 </div>
 
                 <a href="pages/medidas.html" role="button" id="btnNextAnchor">
-                    <img src="assets/btnNext.png" class="btnNext" alt="">
+                    <img src="assets/btnNext.PNG" class="btnNext" alt="">
                 </a>
 
             </div>
